--- a/.gitignore
+++ b/.gitignore
@@ -4848,3 +4848,40 @@ Strife 5.0/Temp/UnityTempFile-da7f8f80dbf81504286ece19a8b2d707
 Strife 5.0/Temp/UnityTempFile-ec8717aafd8c6af43ba11dd14085d83f
 Strife 5.0/Temp/UnityTempFile-f069768abe060e54897d3469859d336c
 Strife 5.0/Temp/workerlic
+Strife 5.0/Library/CurrentLayout-default.dwlt
+Strife 5.0/Library/CurrentLayout-default.dwlt
+Strife 5.0/Temp/UnityTempFile-0376ad5b43bf65147bef6a3816a8bdae
+Strife 5.0/Temp/UnityTempFile-07f4533e606204141a379c6d63d29569
+Strife 5.0/Temp/UnityTempFile-1596995f3e19c2d44b27563c55e2f098
+Strife 5.0/Temp/UnityTempFile-167992ad30dbca14f9ea27f64f914397
+Strife 5.0/Temp/UnityTempFile-1bb1c904d8a44fa499b43f82ea6ca465
+Strife 5.0/Temp/UnityTempFile-1d05812730b641c478c9f6be22b1b398
+Strife 5.0/Temp/UnityTempFile-1e2654e56659e6d42b3ff699510c37c8
+Strife 5.0/Temp/UnityTempFile-20f60075a191cec4e9104838c70bdc03
+Strife 5.0/Temp/UnityTempFile-21e3b2a3f10b8e84980630a1de5be130
+Strife 5.0/Temp/UnityTempFile-371e9b58229483641a52bc88a1bc968c
+Strife 5.0/Temp/UnityTempFile-4a1c2ef6718a3db44a15159c8869eb2e
+Strife 5.0/Temp/UnityTempFile-4bb7f6b9fdbc7fb4992b8c2cc03eeeb3
+Strife 5.0/Temp/UnityTempFile-4caedc4ae40aad340b8586134ae7b91d
+Strife 5.0/Temp/UnityTempFile-54887f45f850e7b47816434410adb3bf
+Strife 5.0/Temp/UnityTempFile-57a836f5ffaeda94aad1c5108a163ce4
+Strife 5.0/Temp/UnityTempFile-790e7590d34c93b48ad90da22027706d
+Strife 5.0/Temp/UnityTempFile-82f131308378c9f48920f09579b4f14a
+Strife 5.0/Temp/UnityTempFile-8b58b65418d035647b0b3c3bbb26ecb0
+Strife 5.0/Temp/UnityTempFile-8dac9d42523799446b44f4fbfb7a30b7
+Strife 5.0/Temp/UnityTempFile-8e1ff6f26e41e1140bef356bd2527d0c
+Strife 5.0/Temp/UnityTempFile-90fff0151b4ff744580704623b656d9c
+Strife 5.0/Temp/UnityTempFile-afa39dc0890eb3d48b94bd15cc02d5c3
+Strife 5.0/Temp/UnityTempFile-b310b6cde9b76f6479043566504f76bd
+Strife 5.0/Temp/UnityTempFile-b5f54bf63a33ea545b0e05c44fcc8c08
+Strife 5.0/Temp/UnityTempFile-b6461b16e544ba9458b9bc871a304e83
+Strife 5.0/Temp/UnityTempFile-b8d783193246ab547affd5a5bfa22657
+Strife 5.0/Temp/UnityTempFile-bfa094ac50ae4b74d8edb44d0d6f31f2
+Strife 5.0/Temp/UnityTempFile-c005400f71e42154897c7414f5195b94
+Strife 5.0/Temp/UnityTempFile-c87c641ef236bf842b5f007d7eaafbdc
+Strife 5.0/Temp/UnityTempFile-ce63a9317ddaac646b10889a3efa484b
+Strife 5.0/Temp/UnityTempFile-d666cef2c3c78814bbe8aaff54f3f696
+Strife 5.0/Temp/UnityTempFile-dc3e4218ab02ecc4d98678dd84150e2c
+Strife 5.0/Temp/UnityTempFile-e8f7759c243199b4488642ce8f38ac82
+Strife 5.0/Temp/UnityTempFile-f5fc8c246c825434296782d77d2ca6c0
+Strife 5.0/Temp/UnityTempFile-fc70faf4a12bfd841b3e2163b6bab439
