--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-Strife 5.0/[Ll]ibrary/
-# Strife 5.0/[Ll]ibrary/[Aa]rtifacts/
+Strife 5.0/[Ll]ibrary/[Aa]rtifacts/
+Strife 5.0/[Ll]ibrary/[Pp]ackage[Cc]ache/
+Strife 5.0/[Ll]ibrary/[Ss]hader[Cc]ache/
+Strife 5.0/[Ll]ibrary/[Ss]tate[Cc]ache/
 Strife 5.0/[Tt]emp/
 # Strife 5.0/[Oo]bj/
 # Strife 5.0/[Bb]uild/
@@ -81,3 +83,4 @@ crashlytics-build.properties
 #Strife 5.0/Assets/Mapbox
 #Strife 5.0/Assets/ThirdPartyAssets
 Strife 5.0/Temp/UnityTempFile-1bb1c904d8a44fa499b43f82ea6ca465
+.gitignore.txt
