Changed shader and added scriptassemblies to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 Strife 5.0/[Ll]ibrary/[Aa]rtifacts/
 Strife 5.0/[Ll]ibrary/[Pp]ackage[Cc]ache/
 Strife 5.0/[Ll]ibrary/[Ss]hader[Cc]ache/
-Strife 5.0/[Ll]ibrary/[Ss]tate[Cc]ache/
+Strife 5.0/[Ll]ibrary/ScriptAssemblies/
 Strife 5.0/[Tt]emp/
 # Strife 5.0/[Oo]bj/
 # Strife 5.0/[Bb]uild/
